<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/grp1" android:checkableBehavior="none" >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/side_menu_home"
            android:title="@string/sidemenu_main" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/side_menu_student"
            android:title="@string/sidemenu_courses" />
    </group>
    <group android:id="@+id/grp2" android:checkableBehavior="none" >
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/side_menu_bell"
            android:title="@string/sidemenu_notifications" />
        <item
            android:id="@+id/nav_my_files"
            android:icon="@drawable/side_menu_file"
            android:title="@string/sidemenu_myfiles" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/side_menu_message"
            android:title="@string/sidemenu_messages" />
    </group>
    <group android:id="@+id/grp3" android:checkableBehavior="none" >
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/side_menu_settings"
            android:title="Contul meu" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/side_menu_logout_flipped"
            android:title="@string/sidemenu_logout"/>
    </group>
</menu>